Fri May 19 11:43:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Further test to check that rset weights are getting distributed
	  correctly in multidatabase cases.

Thu May 18 18:11:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* MultiMatch now splits up RSets appropriately for each of its sub
	  databases, so multimatch stuff works correctly with RSets.

Thu May 18 17:14:52 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Work on testsuite.  Many useful macros produced, tests simplified,
	  and tests can now report failure by throwing an exception instead
	  of by returning "false".

Thu May 18 15:08:09 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test for Rsets in a multimatch.  (Currently fails)

Thu May 18 12:11:50 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added support for using RSets with the network matches

	* Better timeouts when remote end unresponsive

Thu May 18 11:20:58 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added test that setting an rset has appropriate effect on match
	  results (relevant document comes to top).

Thu May 18 11:15:36 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added new exception OmInternalError for really weird problems.

Wed May 17 18:12:53 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added simple test for RSet usage.

Wed May 17 17:52:22 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix memory leak in rset.cc

Wed May 17 17:26:41 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* BM25Weight and TradWeight now ask their statssource for information
	  about the RSet, rather than asking the rset directly.  As a result,
	  they no longer have or need an "RSet * rset" member.

Wed May 17 17:09:35 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* RSet now has a give_stats_to_statssource() method, used by